Issue #5903 assessment protection topic tooltips are visible

--- a/docroot/themes/iucn_backend/css/style.css
+++ b/docroot/themes/iucn_backend/css/style.css
@@ -1239,6 +1239,9 @@ div[id^="block-views-block-account-assignments-block"] .form--inline > .form-act
   overflow: hidden;
   word-break: break-word;
 }
+.paragraph-summary-component.paragraph-summary-component-field_as_protection_topic {
+  overflow: visible;
+}
 .paragraph-diff-row {
   background-color: #fcf8e3 !important;
 }
